@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.122 (gritter) 8/12/06
+.\" Sccsid @(#)doc.tr	1.123 (gritter) 8/13/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -96,7 +96,7 @@
 .fallback BI BIE
 .flig BI 31
 ..
-.ds Sccsdate 8/12/06
+.ds Sccsdate 8/13/06
 .ds Str \*[Sccsdate]
 .substring Str 0 0
 .if '\*[Str]'%' \{\
@@ -1981,7 +1981,9 @@ using \fB\ex\fI\'N\'\fR.\T
 \T'n_.sentchar'4.1\T	\T'n_.sentchar'\fB&sentchar\fR\T	\T'n_.sentchar'Current sentence-ending characters [sic].\T
 \T'n_.ss'2\T	\T'n_.ss'\fB&ss\fR\T	\T'n_.ss'Current space size.\T
 \T'n_.sss'2\T	\T'n_.sss'\fB&sss\fR\T	\T'n_.sss'Current sentence space size.\T
+\T'n_.S'9.1\T	\T'n_.S'\fB&S\fR\T	\T'n_.S'Current tab stops such that they can be passed back to \fBta\fR.\T
 \T'n_.t'7.5\T	\T'n_.t'\fB&t\fR\T	\T'n_.t'Distance to the next trap.\T
+\T'n_.tabs'9.1\T	\T'n_.tabs'\fB&tabs\fR\T	\T'n_.tabs'Current tab stops such that they can be passed back to \fBta\fR.\T
 \T'n_.transchar'4.1\T	\T'n_.transchar'\fB&transchar\fR\T	\T'n_.transchar'Current characters transparent for sentence-ending [sic].\T
 \(en	\fB&T\fR	Set to 1 in \*[NR,] if \fB\-T\fR option used; always 0 in \*[TR.]
 \T'n_.u'4.1\T	\T'n_.u'\fB&u\fR\T	\T'n_.u'Equal to 1 in fill mode and 0 in nofill mode.\T
@@ -4066,6 +4068,10 @@ Set tab stops and types.
 The stop values are separated by spaces, and
 a value preceded by \fB+\fR
 is treated as an increment to the previous stop value.
+The \A'n_.S'\fB&S\fR and \A'n_.tabs'\fB&tabs\fR registers
+both hold a string with the current tab stops
+in a form that is acceptable for the \fBta\fR request;
+they can thus be used to save and restore tab stops.
 .bt
 \fB&ta\fI|Mv|...|Nw|\fBT\fI|At|...|Zu\fRa	\fIN\fR=0	E,\fBm\fR\
 	Set repeated tab stops and types at \fIMv\fR, ..., \fINw\fR,
@@ -4679,10 +4685,11 @@ draws a graphic object of type \fIc\fR
 according to a sequence of parameters,
 which are generally pairs of numbers.
 .nf
-.ta 1.2i
+.ta 1.6i
 .nr nosave 1
 \fB\eD\'l \fIdh dv\'	\fRdraw line from current position by \fIdh,\|dv\fR
 .nr nosave 0
+\fB\eD\'p \fIdh1 dv1 dh2 dv2 ...\'	\fRdraw polygon, i.e. a line to \fIdh1,\|dv1\fR, then to \fIdh2,\|dv2\fR, then ...
 \fB\eD\'c \fId\'	\fRdraw circle of diameter \fId\fR with left side at current position
 \fB\eD\'e \fIu v\'	\fRdraw ellipse of diameters \fIu\fP and \fIv\fP
 \fB\eD\'a \fIa b c d\'\fB	\fRdraw arc from current position to \fIa\fR+\fIc\fR,\|\fIb\fR+\fId\fR, \fRwith center at \fIa\fR,\|\fIb\fR from current position
@@ -5997,6 +6004,7 @@ sequences:
 .tb
 .ta 1.2i
 \fBD\^l \fIdh dv	\fRdraw line from current position by \fIdh,\|dv\fR
+\fBD\^p \fIa b c d ...	\fRdraw polygon, i.e. a line to \fIa,\|b\fR, then to \fIc,\|d\fR, then ...
 \fBD\^c \fId	\fRdraw circle of diameter \fId\fR with left side at current position
 \fBD\^e \fIu v	\fRdraw ellipse of diameters \fIu\fP and \fIv\fP
 \fBD\^a \fIa b c d\fB	\fRdraw arc from current position to \fIa\fR+\fIc\fR,\|\fIb\fR+\fId\fR, \fRwith center at \fIa\fR,\|\fIb\fR from current position
@@ -6293,6 +6301,13 @@ with the \fIgrops\fR post-processor of \*(GR
 \T'x_X_PS'(\fIdpost\fR accepts \fB\eX'PS:\fR...\fB\'\fR and \fBx\ X\ PS:\fR);\T
 the \*(PS output generated by \fIdpost\fR is very different
 to that generated by \fIgrops.\fR
+\fIdpost\fR accepts the \*(GR drawing command extensions
+and sets the horizontal and vertical positions accordingly,
+but otherwise ignores line width, color, and fill specifications.
+.br
+.nr nosave 1
+.ne 6
+.nr nosave 0
 .sc
 Conditional groff compatibility.
 A request is available to control additional
@@ -6339,7 +6354,7 @@ in \*(GR compatibility mode;
 the \T'spacewidth'\fBspacewidth\fR\T request is not effective.
 .pg
 Any call to the \fBcp\fR request
-activates the \*(GR compatibility escape sequences described below;
+activates the following \*(GR compatibility escape sequences;
 any call to the \T'xflag'\fBxflag\fR\T request disables them.
 .pg
 The \fB\eA\fI'string'\fR escape sequence
@@ -6369,6 +6384,11 @@ it allows a more exact optical separation
 since the shape of both characters can be taken into account
 and also does not need to be be positioned directly in the input text
 at every occasion.
+.pg
+The \fB\eD\'p\fR|...\fB\'\fR polygon drawing escape sequence
+is altered such that the path is always closed,
+i.e. if the last line part does not return to the starting position,
+an additional line is added that does.
 .pg
 The escape sequences
 \fB\eF\fIx\fR, \fB\eF(\fIxx\fR, \fB\eF[\fIxxx\fB]\fR,
